force-app/main/default/objects/student__c/fields/school1__c.field-meta.xml
<CustomField>
    <fullName>school1__c</fullName>
    <label>school1</label>
    <referenceTo>school__c</referenceTo>
    <relationshipLabel>student</relationshipLabel>
    <relationshipName>student</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>