force-app/main/default/objects/student__c/recordTypes/arpit_prajapat.recordType-meta.xml
<RecordType>
    <fullName>arpit_prajapat</fullName>
    <active>true</active>
    <label>arpit prajapat</label>
</RecordType>