force-app/main/default/objects/student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Age__c</columns>
    <columns>Fees__c</columns>
    <columns>Roll_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>